--- a/charts/consul/templates/client-daemonset.yaml
+++ b/charts/consul/templates/client-daemonset.yaml
@@ -484,47 +484,28 @@ spec:
       - name: client-acl-init
         image: {{ .Values.global.imageK8S }}
         env:
-        - name: CONSUL_HTTP_ADDR
-          {{- if .Values.global.tls.enabled }}
-          value: https://{{ template "consul.fullname" . }}-server.{{ .Release.Namespace }}.svc:8501
-          {{- else }}
-          value: http://{{ template "consul.fullname" . }}-server.{{ .Release.Namespace }}.svc:8500
-          {{- end }}
-        {{- if (and .Values.global.tls.enabled (not .Values.externalServers.useSystemRoots)) }}
-        - name: CONSUL_CACERT
-          {{- if .Values.global.secretsBackend.vault.enabled }}
-          value: "/vault/secrets/serverca.crt" 
-          {{- else }}
-          value: "/consul/tls/ca/tls.crt"
-          {{- end }}
+        - name: NAMESPACE
+          valueFrom:
+            fieldRef:
+              fieldPath: metadata.namespace
+        - name: POD_NAME
+          valueFrom:
+            fieldRef:
+              fieldPath: metadata.name
+        {{- include "consul.consulK8sConsulServerEnvVars" . | nindent 8 }}
+        {{- if .Values.global.acls.manageSystemACLs }}
+        - name: CONSUL_LOGIN_AUTH_METHOD
+          value: {{ template "consul.fullname" . }}-k8s-component-auth-method
+        - name: CONSUL_LOGIN_META
+          value: "component=client,pod=$(NAMESPACE)/$(POD_NAME)"
         {{- end }}
         command:
           - "/bin/sh"
           - "-ec"
           - |
             consul-k8s-control-plane acl-init \
-              -component-name=client \
-              -acl-auth-method="{{ template "consul.fullname" . }}-k8s-component-auth-method" \
-              {{- if .Values.global.adminPartitions.enabled }}
-              -partition={{ .Values.global.adminPartitions.name }} \
-              {{- end }}
               -log-level={{ default .Values.global.logLevel .Values.client.logLevel }} \
               -log-json={{ .Values.global.logJSON }} \
-              {{- if .Values.externalServers.enabled }}
-              {{- if .Values.global.tls.enabled }}
-              -use-https \
-              {{- end }}
-              {{- range .Values.externalServers.hosts }}
-              -server-address={{ quote . }} \
-              {{- end }}
-              -server-port={{ .Values.externalServers.httpsPort }} \
-              {{- if .Values.externalServers.tlsServerName }}
-              -tls-server-name={{ .Values.externalServers.tlsServerName }} \
-              {{- end }}
-              {{- else if .Values.global.cloud.enabled }}
-              -tls-server-name=server.{{ .Values.global.datacenter}}.{{ .Values.global.domain}} \
-              {{- end }}
-              -consul-api-timeout={{ .Values.global.consulAPITimeout }} \
               -init-type="client"
         volumeMounts:
           - name: aclconfig
