--- a/charts/consul/templates/dns-service.yaml
+++ b/charts/consul/templates/dns-service.yaml
@@ -1,4 +1,4 @@
-{{- if (or (and (ne (.Values.dns.enabled | toString) "-") .Values.dns.enabled) (and (eq (.Values.dns.enabled | toString) "-") .Values.global.enabled)) }}
+{{- if (or (and (ne (.Values.dns.enabled | toString) "-") .Values.dns.enabled) (and (eq (.Values.dns.enabled | toString) "-") .Values.connectInject.transparentProxy.defaultEnabled)) }}
 # Service for Consul DNS.
 apiVersion: v1
 kind: Service
