agentless: map k8s nodes to consul nodes instead of using one node (#1695)

--- a/charts/consul/templates/ingress-gateways-deployment.yaml
+++ b/charts/consul/templates/ingress-gateways-deployment.yaml
@@ -191,13 +191,16 @@ spec:
         - name: CONSUL_LOGIN_META
           value: "component=ingress-gateway,pod=$(NAMESPACE)/$(POD_NAME)"
        {{- end }}
+        - name: CONSUL_NODE_NAME
+          valueFrom:
+            fieldRef:
+              fieldPath: spec.nodeName
         command:
         - "/bin/sh"
         - "-ec"
         - |
           consul-k8s-control-plane connect-init -pod-name=${POD_NAME} -pod-namespace=${NAMESPACE} \
           -gateway-kind="ingress-gateway" \
-          -consul-node-name="k8s-service-mesh" \
           -proxy-id-file=/consul/service/proxy-id \
           -service-name={{ template "consul.fullname" $root }}-{{ .name }} \
           -log-level={{ default $root.Values.global.logLevel }} \
@@ -242,6 +245,10 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: metadata.namespace
+        - name: DP_SERVICE_NODE_NAME
+          valueFrom:
+            fieldRef:
+              fieldPath: spec.nodeName
         command:
         - /bin/sh
         - -ec
@@ -260,7 +267,7 @@ spec:
             -grpc-port=8502 \
             {{- end }}
             -proxy-service-id=$POD_NAME \
-            -service-node-name="k8s-service-mesh" \
+            -service-node-name=$DP_SERVICE_NODE_NAME \
             {{- if $root.Values.global.enableConsulNamespaces }}
             -service-namespace={{ (default $defaults.consulNamespace .consulNamespace) }} \
             {{- end }}
