--- a/.github/workflows/backport-checker.yml
+++ b/.github/workflows/backport-checker.yml
@@ -1,3 +1,5 @@
+# Copyright (c) HashiCorp, Inc.
+
 # This workflow checks that there is either a 'pr/no-backport' label applied to a PR
 # or there is a backport/<pr number>.txt file associated with a PR for a backport label
 
