--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -1,13 +1,19 @@
 # Dispatch to the consul-k8s-workflows when a PR is created and on merges to main/release*
-name: pr
+name: merge
 on:
-  pull_request:
+  push:
+    # Sequence of patterns matched against refs/heads
+    branches:
+      # Push events on main branch
+      - main
+      # Push events to branches matching refs/heads/release/**
+      - "release/**"
 
 # these should be the only settings that you will ever need to change
 env:
   CONSUL_IMAGE: hashicorppreview/consul-enterprise:1.16-dev # Consul's enterprise version to use in tests. We use this consul image on release branches too
   BRANCH: ${{ github.head_ref || github.ref_name }}
-  CONTEXT: "pr"
+  CONTEXT: "merge"
   SHA: ${{ github.event.pull_request.head.sha || github.sha }}
 
 jobs:
