Update backport assistant to support -gh-automerge (#2047)

--- a/.github/workflows/backport.yml
+++ b/.github/workflows/backport.yml
@@ -13,10 +13,10 @@ jobs:
   backport:
     if: github.event.pull_request.merged
     runs-on: ubuntu-latest
-    container: hashicorpdev/backport-assistant:0.2.5
+    container: hashicorpdev/backport-assistant:0.3.0
     steps:
       - name: Run Backport Assistant
-        run: backport-assistant backport -automerge
+        run: backport-assistant backport -merge-method=squash -gh-automerge
         env:
           BACKPORT_LABEL_REGEXP: "backport/(?P<target>\\d+\\.\\d+\\.x)"
           BACKPORT_TARGET_TEMPLATE: "release/{{.target}}"
