--- a/.github/workflows/nightly-cleanup.yml
+++ b/.github/workflows/nightly-cleanup.yml
@@ -17,7 +17,7 @@ jobs:
     name: cleanup
     runs-on: ubuntu-latest
     steps:
-    - uses: benc-uk/workflow-dispatch@v1.2.2
+    - uses: benc-uk/workflow-dispatch@798e70c97009500150087d30d9f11c5444830385 # v1.2.2
       name: cleanup
       with:
         workflow: cleanup.yml
