Fix Sync Catalog ACL Token Environment Var Name (#2068)
* Fix Sync Catalog ACL Token Environment Var Name
* Update ACL variable name in tests

--- a/charts/consul/templates/sync-catalog-deployment.yaml
+++ b/charts/consul/templates/sync-catalog-deployment.yaml
@@ -100,7 +100,7 @@ spec:
                 fieldRef:
                   fieldPath: metadata.namespace
             {{- if (and .Values.syncCatalog.aclSyncToken.secretName .Values.syncCatalog.aclSyncToken.secretKey) }}
-            - name: CONSUL_HTTP_TOKEN
+            - name: CONSUL_ACL_TOKEN
               valueFrom:
                 secretKeyRef:
                   name: {{ .Values.syncCatalog.aclSyncToken.secretName }}
