add sameness group to source intention (#2097)
* add sameness group to source intention

* add more test coverage

* add comment on metaValueMaxLength variable

* fix comment lint issue

--- a/charts/consul/templates/crd-exportedservices.yaml
+++ b/charts/consul/templates/crd-exportedservices.yaml
@@ -76,7 +76,8 @@ spec:
                               the service to.
                             type: string
                           peer:
-                            description: Peer is the name of the peer to export the service to.
+                            description: Peer is the name of the peer to export the
+                              service to.
                             type: string
                           samenessGroup:
                             description: SamenessGroup is the name of the sameness
